--- a/index.ipynb
+++ b/index.ipynb
@@ -363,8 +363,7 @@
    "source": [
     "trac_population = {'x': names_and_ranks, \n",
     "                     'y': city_populations, \n",
-    "                     'type': 'bar', \n",
-    "                     'name': 'populations'}"
+    "                     'type': 'bar'                    }"
    ]
   },
   {
