--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    "source": [
     "trac_population = {'x': names_and_ranks, \n",
     "                     'y': city_populations,\n",
-    "                       \n",
+    "                     'text': names_and_rank  \n",
     "                     'type': 'bar'}"
    ]
   },
