--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in cities\n"
    ]
   },
   {
